--- a/src/App.css
+++ b/src/App.css
@@ -11,31 +11,50 @@
   box-shadow: 0px 2.982px 7.5px rgba(0,0,0,.1);
 }
 
+.logo {
+  height: 30px;
+  margin: .5em 
+}
+
 body {
   background-color: white;
+  font-family: 'Poppins', sans-serif;
 }
 
-.hero {
-  width: 110px;
-  height: 160px;
-  background-position: center center;
-  background-repeat: no-repeat;
-  object-fit: none;
-  border-radius: 2em
+.center {
+  max-width: 100%;
+  margin: 1.5em 1em 0em 1em;
 }
 
-.hero-h1 {
+.center-h1 {
   font-size: 4rem;
   display: flex;
-  margin: 1em 1em 0em 1em;
+  margin: 0em 1em 0em 1em;
   padding: 0em;
   text-align: left;
 }
 
-.hero-h5 {
+.center-h5 {
   font-size: 1.7rem;
   display: flex;
   margin: 1em 0 1em 1em;
   padding: 0em 0em 0em 1.5em;
   text-align: left;
+}
+
+.card-img {
+  border-radius: .7em !important;
+}
+
+.card-text {
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  margin: 0;
+
+}
+
+.card-text p {
+  margin: 0;
+  padding: 0;
 }
