--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,7 @@
 body {
   background-color: white;
   font-family: 'Poppins', sans-serif;
+  overflow-x: hidden;
 }
 
 .center {
@@ -43,7 +44,6 @@ body {
 }
 
 .card {
-    width: 33vw !important;
     flex: 0 0 auto !important;
     display: flex !important;
     flex-direction: column !important;
@@ -62,7 +62,6 @@ body {
   align-items: center;
   justify-content: left;
   margin: 0;
-
 }
 
 .card-text p {
@@ -70,3 +69,12 @@ body {
   padding: 0;
 }
 
+.card-badge {
+  position: absolute;
+  top: 6px;
+  left: 6px;
+  background-color: white;
+  padding: 5px 7px;
+  border-radius: 5px;
+  font-weight: bold;
+}
